# ifa-data-platform

./: .env.example  .gitignore  B4_midfreq_batch1_final_report.md  B4_midfreq_batch1_report.md  B4_midfreq_final_closure.md  B4_midfreq_runtime_clarification.md  B5_midfreq_runtime_acceptance_report.md  B6_midfreq_expansion_plan.md  B6_midfreq_expansion_report.md  IFA_ARCHIVE_LAYER_DESIGN.md  IFA_ARCHIVE_LAYER_EXECUTION_PLAN.md  IFA_COLLECTION_DATASET_REGISTRY.md  IFA_COLLECTION_RUNBOOK.md  IFA_MID_FREQUENCY_DESIGN.md  IFA_MID_HIGH_PLAN.md  IFA_PROJECT_CONTEXT.md  IFA_RUNTIME_AB_DESIGN.md  IFA_RUNTIME_AB_EXECUTION_PLAN.md  LOWFREQ_OPERATIONS_GUIDE.md  OPERATOR_BUSINESS_HANDOFF_COLLECTION_LAYER_2026-04-17_0043.txt  README.md  alembic.ini  job10_lowfreq_asset_plan.md  job10a_lowfreq_asset_report.md  job3_report_20260410.md  job4_report_20260410.md  job5_report.md  job5_report_20260410.md  job6_report_20260410.md  job7_lowfreq_gap_and_expansion_plan.md  job8a_lowfreq_base_extension_plan.md  job8a_lowfreq_base_extension_report.md  job8b_event_metadata_plan.md  job8b_event_metadata_report.md  job9_lowfreq_asset_extension_plan.md  job9_lowfreq_asset_extension_report.md  job9_lowfreq_event_and_slowvar_plan.md  job9_lowfreq_event_and_slowvar_report.md  pyproject.toml
alembic/: env.py
artifacts/: acceptance_cleanup_2026-04-16_0832.json  archive_and_commodity_check_2026-04-16_0924.json  archive_v2_m1_run_2026-04-18_0310.json  archive_v2_m2_run_2026-04-18_0322.json  archive_v2_m3_run_2026-04-18_0331.json  db_reality_snapshot_v2_20260424.json  full_chain_analysis_2026-04-16_0905.json  (+11 more)
(+650 files in other folders)
