[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ifa-data-platform"
version = "0.1.0"
description = "IFA 2.0 data and evidence substrate"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ifa_data_platform"]

[tool.ruff]
target-version = "py311"

[tool.mypy]
python_version = "3.11"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require external resources)",
]
